--- a/zerosicx-site/css/styles.css
+++ b/zerosicx-site/css/styles.css
@@ -20,6 +20,7 @@ h1, h2, h3 {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
   z-index: 99;
   position: relative;
+  max-height: 50px;
 }
 
 .nav-item {
@@ -34,8 +35,8 @@ h1, h2, h3 {
 }
 
 .logo {
-  width: 50px;
-  border-radius: 50%;
+  font-size: 1.5rem;
+  font-weight: bold;
   padding: 0.5% 2%;
 }
 
