--- a/zerosicx-site/css/styles.css
+++ b/zerosicx-site/css/styles.css
@@ -48,7 +48,7 @@ h1, h2, h3 {
   text-align: center;
 }
 
-.intro-content h1 {
+.intro-content > h1 {
   font-family: "Sacramento", cursive;
   font-size: 5rem;
 }
@@ -71,4 +71,21 @@ h1, h2, h3 {
 main {
   padding: 10% 0;
   background-color: #e4f0eb;
+}
+
+.grid-title {
+  grid-area: title;
+  padding: 4% 15%;
+}
+
+.grid-about {
+  grid-area: about;
+  padding: 4% 15%;
+}
+
+.grid-container {
+  display: grid;
+  grid-gap: 0;
+  grid-template-columns: auto auto;
+  grid-template-areas: "title about";
 }
