--- a/css/project.css
+++ b/css/project.css
@@ -22,6 +22,7 @@
     background-color: #f2f2f2;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     padding: 5%;
+    overflow: hidden;
 }
 
 .project-card:hover {
