Added images for video chat project, modified card sizes

--- a/css/project.css
+++ b/css/project.css
@@ -12,12 +12,12 @@
 .grid-wrapper {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, 230px);
+    grid-template-columns: repeat(auto-fit, 250px);
     justify-content: space-between;
 }
 
 .project-card {
-    height: 300px;
+    height: 350px;
     border-radius: 5%;
     background-color: #f2f2f2;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
@@ -31,5 +31,5 @@
 }
 
 .project-card-preview {
-    max-width: 210px;
+    width: 225px;
 }
