--- a/css/project.css
+++ b/css/project.css
@@ -13,7 +13,9 @@
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, 250px);
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .project-card {
@@ -33,3 +35,14 @@
 .project-card-preview {
     width: 225px;
 }
+
+/* @media only screen and (max-width: 700px) {
+    .grid-wrapper {
+        grid-template-columns: repeat(auto-fit, 340px);
+    }
+
+    .project-card-preview {
+        width: 300px;
+    }
+
+} */
