--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,11 @@ h1, h2, h3 {
 
 .nav-item a {
   text-decoration: none;
+  color: #5e45b0;
+}
+
+.nav-item a:hover {
+  color:#a377a7
 }
 
 .hamburger {
