Made top accordion panel open by default

--- a/css/course.css
+++ b/css/course.css
@@ -43,6 +43,16 @@ tr, td {
     overflow: hidden;
 }
 
-.main-panel {
-    display: revert;
+.accordion:after {
+    content: '\02795';
+    /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796";
+    /* Unicode character for "minus" sign (-) */
 }
