Added style to increase portrait size in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,11 @@ main {
   #hamburger {
     display: inline;
   }
+
+  .intro-portrait {
+    width: 50%;
+    border-radius: 50%;
+  }
 }
 
 .accordion {
